--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>와이어 프레임 연습</title>
+    <link rel="stylesheet" href="css/index.css" />
+  </head>
+  <body>
+    <!-- 전체 -->
+    <div class="container">
+      <!-- 상단 -->
+      <header>
+        <div class="header-logo"><a href="#">로고</a></div>
+        <div class="menu">
+            <!-- 호버 메뉴 -->
+            <div class="hover-menu">
+              <ul>
+                <li>menu1</li>
+                <li>menu2</li>
+                <li>menu3</li>
+                <li>menu4</li>
+        </div>
+          </ul>
+        </div>
+      </header>
+      <main>
+        <!-- 메인 탑 -->
+        <div class="image-slide">이미지 슬라이드</div>
+        <!-- 메인 바텀 -->
+        <div class="main-bottom">
+          <div class="notice">공지사항/갤러리</div>
+          <div class="banner">배너</div>
+          <div class="link">바로가기</div>
+        </div>
+      </main>
+      <!-- 하단 -->
+      <footer>
+        <div class="footer-logo"><a href="#">로고</a></div>
+        <div class="copyright">copyright</div>
+        <div class="sns">SNS</div>
+      </footer>
+    </div>
+  </body>
 </html>
